# lending-club-credit-risk

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: 00-environment-setup.md  01-project-structure-and-paths.md  02-Columns.md  03-launch-protocol.md  04-baseline-model-analysis.md  05-lightgbm-model-analysis.md  07-feature-engineering.md  08-training_pipeline_design.md  09-build-preprocessor-object.md  10-build-train_pipeline-script.md  11-build-train-module.md  12-model-evaluation.md  13-artifact-saving.md  14-transition-monolith-to-modular-ml-pipeline.md  15-first-end-to-end-modular-pipeline-run.md  16-repository-hardening-roadmap.md  training_pipeline_design.md
notebooks/: 01-data-loading-and-exploration.ipynb  02-exp_lightgbm_model_state_before_after_fit.ipynb
src/: config.py  main.py
src/data/: load.py
src/features/: preprocess.py  preprocessor.py
src/lending_club_credit_risk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/modeling/: evaluate.py  train.py
src/persistence/: save_artifacts.py
src/pipeline/: train_pipeline.py
